@@ -150,3 +150,6 @@ RewriteRule api/getFaqs/([a-z\-]+)/([0-9]+)                 api.php?action=getFa
 RewriteRule api/getFaq/([a-z\-]+)/([0-9]+)                  api.php?action=getFaq&lang=$1&recordId=$2 [L,QSA]
 RewriteRule api/getFaqAsPdf/([a-z\-]+)/([0-9]+)/([0-9]+)    api.php?action=getFaqAsPdf&lang=$1&categoryId=$2&recordId=$3 [L,QSA]
 RewriteRule api/getAttachmentsFromFaq/([a-z\-]+)/([0-9]+)   api.php?action=getAttachmentsFromFaq&lang=$1&recordId=$2 [L,QSA]
+RewriteRule api/getPopular                                  api.php?action=getPopular [L,QSA]
+RewriteRule api/getLatest                                   api.php?action=getLatest [L,QSA]
+RewriteRule api/getNews                                     api.php?action=getNews [L,QSA]
