@@ -131,6 +131,9 @@ server {
             rewrite api/getFaq/([a-z\-]+)/([0-9]+) /phpmyfaq/api.php?action=getFaq&lang=$1&recordId=$2 last;
             rewrite api/getFaqAsPdf/([a-z\-]+)/([0-9]+)/([0-9]+) /phpmyfaq/api.php?action=getFaq&lang=$1&categoryId=$2&recordId=$3 last;
             rewrite api/getAttachmentsFromFaq/([a-z\-]+)/([0-9]+) /phpmyfaq/api.php?action=getAttachmentsFromFaq&lang=$1&recordId=$2 last;
+            rewrite api/getPopular /phpmyfaq/api.php?action=getPopular last;
+            rewrite api/getLatest /phpmyfaq/api.php?action=getLatest last;
+            rewrite api/getNews /phpmyfaq/api.php?action=getNews last;
 
             break;
         }
