@@ -173,6 +173,18 @@
                     <action type="Rewrite" url="/phpmyfaq/api.php?action=getFaqAsPdf&amp;lang={R:1}&amp;categoryId={R:2}&amp;recordId={R:3}"
                             appendQueryString="true"/>
                 </rule>
+                <rule name="rule 37L" stopProcessing="true">
+                    <match url="phpmyfaq/api/getPopular"/>
+                    <action type="Rewrite" url="/phpmyfaq/api.php?action=getPopular" appendQueryString="true"/>
+                </rule>
+                <rule name="rule 38L" stopProcessing="true">
+                    <match url="phpmyfaq/api/getLatest"/>
+                    <action type="Rewrite" url="/phpmyfaq/api.php?action=getLatest" appendQueryString="true"/>
+                </rule>
+                <rule name="rule 38L" stopProcessing="true">
+                    <match url="phpmyfaq/api/getNews"/>
+                    <action type="Rewrite" url="/phpmyfaq/api.php?action=getNews" appendQueryString="true"/>
+                </rule>
             </rules>
         </rewrite>
         <defaultDocument>
