@@ -44,6 +44,7 @@ Version 2.9.0-alpha3 - 2015-03-
 - updated bundles SwiftMailer to version 5.3.1 (Christopher Andrews, Thorsten)
 - dropped support for ext/mysql (Thorsten)
 - dropped support for SQLite2 (Thorsten)
+- dropped support for Zeus Webserver (Thorsten)
 
 Version 2.8.22 - 2015-03-
 - updated Czech translation
